--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,9 @@ jobs:
       - run: npm run build
       - run: npm run lint
       - run: npm t
-      - uses: codecov/codecov-action@v2
+      - uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       - run: npm run type-coverage
       - name: persist to workspace
         uses: actions/upload-artifact@v3
