--- a/.eslintrc
+++ b/.eslintrc
@@ -4,44 +4,31 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "plugins": ["@typescript-eslint", "prettier", "no-null"],
+  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
     "prettier",
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:@typescript-eslint/strict"
+    "plugin:@typescript-eslint/strict-type-checked",
+    "plugin:@typescript-eslint/stylistic-type-checked",
+    "plugin:react-hooks/recommended"
   ],
   "rules": {
     "no-shadow": "error",
+    "no-param-reassign": "error",
     "prettier/prettier": "warn",
-    "no-null/no-null": "error",
-    "@typescript-eslint/ban-types": [
-      "error",
-      {
-        "types": {
-          "null": null
-        }
-      }
-    ],
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-explicit-any": "error",
-    "@typescript-eslint/no-non-null-assertion": "error",
+    "@typescript-eslint/ban-ts-comment": "error",
+    "@typescript-eslint/ban-types": ["error", { "types": { "null": null } }],
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/space-before-function-paren": [
-      "error",
-      {
-        "anonymous": "never",
-        "named": "never",
-        "asyncArrow": "always"
-      }
-    ],
-    "@typescript-eslint/promise-function-async": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       { "ignoreRestSiblings": true, "argsIgnorePattern": "^_" }
+    ],
+    "@typescript-eslint/switch-exhaustiveness-check": "error",
+    "no-restricted-syntax": [
+      "error",
+      { "selector": "TSEnumDeclaration", "message": "Don't declare enums" },
+      { "selector": "Literal[raw=null]", "message": "Use undefined instead of null" }
     ]
   }
 }
