--- a/package.json
+++ b/package.json
@@ -47,32 +47,32 @@
     "url": "git+https://github.com/iyegoroff/with-context-selector.git"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@testing-library/react": "^13.3.0",
-    "@types/jest": "^28.1.8",
-    "@types/node": "^18.7.13",
-    "@types/react": "^18.0.17",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.7",
+    "@types/react": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "@welldone-software/why-did-you-render": "iyegoroff/why-did-you-render#prebuilt",
-    "eslint": "^8.22.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard-with-typescript": "^22.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.1",
-    "jest": "^29.0.0",
-    "jest-environment-jsdom": "^29.0.0",
-    "prettier": "^2.7.1",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "prettier": "^3.0.1",
     "react": "^18.2.0",
+    "type-coverage": "^2.26.0",
+    "typescript": "^5.1.6",
+    "use-pipe-ts": "^2.0.3"
+  },
+  "dependencies": {
     "ts-is-defined": "^3.0.4",
-    "type-coverage": "^2.22.0",
-    "typescript": "^4.7.4",
-    "use-pipe-ts": "^1.0.8"
+    "ts-react-memo": "^0.0.2",
+    "ts-deep-readonly": "^0.0.5"
   },
   "peerDependencies": {
     "react": "*"
