--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.8",
   "description": "Generic React context selector HOC",
   "sideEffects": false,
-  "types": "./dist/dts/index.d.ts",
   "main": "./dist/cjs/index.js",
   "module": "./dist/mjs/index.js",
   "react-native": "./dist/mjs/index.js",
@@ -18,7 +17,7 @@
   "scripts": {
     "preversion": "npm run lint -- --fix && npm run build && npm run typecheck-test && npm t && npm run type-coverage",
     "postversion": "git add . && git commit -am \"lint & docs [skip build]\" || : && git push && git push --tags",
-    "build:ts": "tsc -p configs/tsconfig.cjs.json && tsc -p configs/tsconfig.mjs.json && tsc -p configs/tsconfig.dts.json",
+    "build:ts": "tsc -p configs/tsconfig.cjs.json && tsc -p configs/tsconfig.mjs.json",
     "build": "rm -rf dist && npm run build:ts && echo '{ \"type\": \"commonjs\" }' >> dist/cjs/package.json",
     "lint": "eslint .",
     "test": "jest",
